adjusted scrollbars and clear the redirect issue on Join page

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -234,6 +234,8 @@ body {
 	width: 100%;
 	max-height: 1008px;
 	overflow-y: auto;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
 .frmUnderline .dataList .dataItem {
 	display: flex;
